--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -130,7 +130,22 @@
     "- super不是关键字，是一个类\n",
     "- super的作用是获取MRO列表中的第一个类\n",
     "- super与父类没有直接关系，但是可以通过super调用父类\n",
-    "- super使用的两个方法"
+    "- super使用的两个方法\n",
+    "\n",
+    "## 单继承和多继承\n",
+    "- 单继承：每个类只能继承一个类\n",
+    "- 多继承：每个类可以继承多个类\n",
+    "- 单继承和多继承的优缺点：\n",
+    "    - 单继承：\n",
+    "        - 传承有序，逻辑清晰，语法简单，隐患少\n",
+    "        - 功能不能无限扩展，只能在当前唯一的继承链中扩展\n",
+    "    - 多继承：\n",
+    "        - 类的功能扩展方便\n",
+    "        - 继承关系混乱\n",
+    "- 菱形继承/钻石继承\n",
+    "        - 多个子类继承同一个父类，这些子类又被同一个类继承，于是继承关系图形成一个菱形\n",
+    "        \n",
+    "        "
    ]
   },
   {
