--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -122,17 +122,18 @@
     "    - 次序查找父类\n",
     "    - 构造函数如果本类中没有定义，则自动查找调用父类构造函数\n",
     "    - 如果本类由定义，则使用本类中的\n",
-    "## 构造函数\n",
+    "### 构造函数\n",
+    "- 在对象进行实例化的时候，系统自动调用的一个函数叫构造函数（魔法函数），通常此函数用来对的实例对象进行初始化\n",
     "- 构造函数是一类特殊的函数，在类进行实例化之前进行调用\n",
     "- 如果子类定义了构造函数，则实例化是调用子类的构造函数，否则向上查找父类的构造函数\n",
     "- 子类实例化时，参数应与父类构造函数的参数相一致\n",
-    "## super\n",
+    "### super\n",
     "- super不是关键字，是一个类\n",
     "- super的作用是获取MRO列表中的第一个类\n",
     "- super与父类没有直接关系，但是可以通过super调用父类\n",
     "- super使用的两个方法\n",
     "\n",
-    "## 单继承和多继承\n",
+    "### 单继承和多继承\n",
     "- 单继承：每个类只能继承一个类\n",
     "- 多继承：每个类可以继承多个类\n",
     "- 单继承和多继承的优缺点：\n",
@@ -144,7 +145,20 @@
     "        - 继承关系混乱\n",
     "- 菱形继承/钻石继承\n",
     "        - 多个子类继承同一个父类，这些子类又被同一个类继承，于是继承关系图形成一个菱形\n",
-    "        \n",
+    "        - 关于多继承的MRO\n",
+    "            - MRO就是多继承中，用于保存继承顺序的一个列表\n",
+    "            - python本身采用C3算法来对多继承的菱形继承进行计算的结果\n",
+    "            - MRO列表计算原则：\n",
+    "                - 子类永远在父类前面\n",
+    "                - 如果多个父类，则根据继承语法中括号内类的书写顺序存放\n",
+    "                - 如果多个类继承了同一个父类，子类的子类只会选取继承语法中括号中第一父类的父类\n",
+    "## 5.3 多态\n",
+    "- 多态是同一个对象在不同情况下由不同的状态出现\n",
+    "- 多态不是语法，是一种设计思想\n",
+    "- 多态性：一种调用方式，不同的执行结果\n",
+    "- Mixin设计：\n",
+    "    - 主要采用多继承方式对类的功能进行扩展\n",
+    "    \n",
     "        "
    ]
   },
@@ -528,14 +542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "这是一个构造函数\n"
+      "这是一个子类构造函数\n"
      ]
     }
    ],
@@ -590,25 +604,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "这是一只小狗\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-084b2426e5be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;31m# Cat类缺少构造函数参数，报错\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mxiaomao\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'name'"
+      "这是一只小狗\n",
+      "这是一只 123\n"
      ]
     }
    ],
@@ -630,7 +634,47 @@
     "xiaogou = Dog()\n",
     "\n",
     "# Cat类缺少构造函数参数，报错\n",
-    "xiaomao = Cat()"
+    "xiaomao = Cat(123)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B\n",
+      "1\n",
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "## 继承中构造函数-4\n",
+    "class A():\n",
+    "    def __init__(self):\n",
+    "        print(\"A\")\n",
+    "class B(A):\n",
+    "    def __init__(self,name):\n",
+    "        print(\"B\")\n",
+    "        print(name)\n",
+    "        \n",
+    "class C(B):\n",
+    "    # 扩展B类的功能\n",
+    "    '''\n",
+    "    # （1）通过父类名调用\n",
+    "    def __init__(self,name):\n",
+    "        B.__init__(self,name)\n",
+    "        print(\"C\")\n",
+    "    '''\n",
+    "    # (2) 使用super()\n",
+    "    def __init__(self,name):\n",
+    "        super(C,self).__init__(name)\n",
+    "        print(\"C\")\n",
+    "c = C(1)"
    ]
   },
   {
@@ -638,7 +682,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 菱形继承\n",
+    "class A():\n",
+    "    pass\n",
+    "\n",
+    "class B(A):\n",
+    "    pass\n",
+    "class C(A):\n",
+    "    pass\n",
+    "\n",
+    "class D(B,C):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
