--- a/OOP.ipynb
+++ b/OOP.ipynb
@@ -158,14 +158,33 @@
     "- 多态性：一种调用方式，不同的执行结果\n",
     "- Mixin设计：\n",
     "    - 主要采用多继承方式对类的功能进行扩展\n",
-    "    \n",
-    "        "
+    "    - 加入继承父类的功能。\n",
+    "    - mixin采用多继承的语法\n",
+    "    - mixin必须表示某一个单一功能，而不是某个物品\n",
+    "    - 职责必须单一，如果有多个功能，则写多个Mixin\n",
+    "    - Mixin不能依赖子类的实现\n",
+    "    - 子类即使没有继承这个Mixin类，也能工作，只是缺少某个功能\n",
+    "- Mixin优点：\n",
+    "    - 使用Mixin可以在不对类进行任何修改的情况下，扩充子类功能\n",
+    "    - 可以方便的组织和维护不同功能组件的划分\n",
+    "    - 可以根据需要任意调整功能类的组合\n",
+    "    - 可以避免创建很多新的类，导致类的继承混乱\n",
+    "# 6 类的相关函数\n",
+    "- issubclass 判断一个类是不是另一个类的子类\n",
+    "- isinstance 判断一个对象是否是另一个类的实例  \n",
+    "- hasattr 判断一个对象是否有成员xxx \n",
+    "- getattr\n",
+    "- setattr\n",
+    "- delattr\n",
+    "- dir 获取对象的成员列表\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -679,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,6 +714,136 @@
     "class D(B,C):\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# issubclass  判断一个类是不是另一个类的子类\n",
+    "class a():\n",
+    "    pass\n",
+    "class b(a):\n",
+    "    pass\n",
+    "print(issubclass(b,a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# isinstance\n",
+    "class a():\n",
+    "    pass\n",
+    "aa =a()\n",
+    "print(isinstance(aa,a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# hasattr\n",
+    "class A():\n",
+    "    name = None\n",
+    "a = A()\n",
+    "print(hasattr(a,'name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<class '__main__.Tutor'>, <class '__main__.Teacher'>, <class '__main__.Student'>, <class '__main__.Persion'>, <class 'object'>)\n",
+      "{}\n",
+      "{'__module__': '__main__', '__doc__': None}\n",
+      "******************************************************************************************\n",
+      "(<class '__main__.TutorMixin'>, <class '__main__.Persion'>, <class '__main__.TeacherMixin'>, <class '__main__.StudentMixin'>, <class 'object'>)\n",
+      "{}\n",
+      "{'__module__': '__main__', '__doc__': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# mixin 示例：\n",
+    "# 多继承版\n",
+    "class Persion():\n",
+    "    name = \"xiaowang\"\n",
+    "    age = 18\n",
+    "    def eat(self):\n",
+    "        print(\"eat\")\n",
+    "    def drink(self):\n",
+    "        print(\"drink\")\n",
+    "class Teacher(Persion):\n",
+    "    def work(self):\n",
+    "        print(\"work\")\n",
+    "class Student(Persion):\n",
+    "    def study(self):\n",
+    "        print(\"study\")\n",
+    "class Tutor(Teacher,Student):\n",
+    "    pass\n",
+    "t = Tutor()\n",
+    "print(Tutor.__mro__)\n",
+    "print(t.__dict__)\n",
+    "print(Tutor.__dict__)\n",
+    "\n",
+    "\n",
+    "print(\"******************************\"*3)\n",
+    "# Mixin 版\n",
+    "class TeacherMixin():\n",
+    "    def work(self):\n",
+    "        print(\"work\")\n",
+    "class StudentMixin():\n",
+    "    def study(self):\n",
+    "        print(\"study\")\n",
+    "class TutorMixin(Persion,TeacherMixin,StudentMixin):\n",
+    "    pass\n",
+    "tt = TutorMixin()\n",
+    "print(TutorMixin.__mro__)\n",
+    "print(tt.__dict__)\n",
+    "print(TutorMixin.__dict__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
